# codex-job-worker

./: .gitignore  .gitmodules  DEBUG_VITS_FINETUNING.md  GITLAB_JOBS_README.md  GRADIO_DEMO_README.md  README.md  SIMPLE_DEBUG_GUIDE.md  STABLETTS_SETUP.md  StableTTS.patch  TRAINING_INSTRUCTIONS.md  TTS_FINETUNING_README.md  TTS_FINETUNING_REQUIREMENTS.md  TTS_WORKFLOW_PLANNING.md  W2V2BERT_ASR_README.md  WORKER_IMPLEMENTATION_PLAN.md  align_audio_text.py  apply_submodule_patches.sh  batch_tts_inference.py  calculate_audio_duration.py  compare_csv_text.py  convert_metadata_to_stable_tts.py  example_gitlab_jobs_usage.py  extract_from_edit_history.py  extract_missing_verses.py  filter_csv_by_existing_files.py  find_best_checkpoint.py  finetune-hf-vits.patch  generate_missing_verses_plan.md  gitlab_jobs.py  gitlab_to_hf_dataset.py  gradio_demo.py  gradio_demo_stabletts.py  gradio_demo_w2v2bert_asr.py  inference_stabletts.py  inference_w2v2bert_asr.py  inspect_dataset.py  prepare_tts_dataset.py  preprocess_audio.py  preprocess_stabletts.py  pyproject.toml  (+12 more)
aeneas/: Dockerfile
handlers/: __init__.py  base.py
handlers/asr/: __init__.py
handlers/asr/w2v2bert/: __init__.py  inference.py  training.py  training_and_inference.py
handlers/tts/: __init__.py
handlers/tts/stabletts/: __init__.py  inference.py  training.py  training_and_inference.py
launcher_project/: .env.template  .gitignore  README.md  cloud_provider.py  dryrun_test.py  monitor.py  pyproject.toml  run_monitor_cron.sh  skypilot_dryrun.yaml  skypilot_force_job.yaml  skypilot_provider.py  skypilot_worker.yaml  skypilot_worker_polling.yaml  vast_provider.py
