[project]
name = "audio-text-tests"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "accelerate>=1.12.0",
    "cython>=3.2.1",
    "datasets>=4.4.1",
    "fire>=0.7.1",
    "hdbscan>=0.8.40",
    "librosa>=0.11.0",
    "mutagen>=1.47.0",
    "numpy>=2.3.5",
    "pydub>=0.25.1",
    "pyyaml>=6.0.3",
    "requests>=2.32.5",
    "resemblyzer>=0.1.4",
    "scikit-learn>=1.7.2",
    "soundfile>=0.13.1",
    "tensorboard>=2.20.0",
    "torch>=2.9.1",
    "torchaudio>=2.9.1",
    "tqdm>=4.67.1",
    "transformers>=4.57.3",
    "uroman>=1.3.1.1",
]
