[project]
name = "codex-job-launcher"
version = "0.1.0"
description = "SkyPilot launcher and monitor for codex-job-worker"
requires-python = ">=3.10"
dependencies = [
    "fire>=0.7.1",
    "python-dotenv>=1.2.1",
    "python-gitlab>=8.0.0",
    "pyyaml>=6.0.3",
    "skypilot[vast]>=0.9.0",
]

[dependency-groups]
dev = []
